13874: sync with NAS

--- a/data/notebooks/pbd/BoundariesDetection.ipynb
+++ b/data/notebooks/pbd/BoundariesDetection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,9 +358,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".ipynb_checkpoints\n",
+      "20180410_082051_0f42_aoi.geojson\n",
+      "20170501_074948_101f_aoi.geojson\n",
+      "20170912_075604_1032_aoi.geojson\n",
+      "20170916_074939_0f17_aoi.geojson\n",
+      "20170921_075107_0f15_aoi.geojson\n",
+      "20160913_074800_0e0e_aoi.geojson\n"
+     ]
+    }
+   ],
    "source": [
     "for file in os.listdir(os.path.join(PBD_DIR, \"data\")):\n",
     "    print(file)"
@@ -368,9 +382,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/jovyan/work/notebooks/pbd/data/20180410_082051_0f42_aoi.geojson'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "aoi_path = os.getenv(\"AOI\", os.path.join(PBD_DIR, \"data/20180410_082051_0f42_aoi.geojson\"))     \n",
     "aoi_path"
@@ -378,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,11 +413,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentinel_tiles_path = os.path.join(BASE, \"grids/sentinel2grid.geojson\")"
+    "sentinel_tiles_path = \"sentinel2grid.geojson\""
    ]
   },
   {
@@ -404,9 +429,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tileID</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>35UQP</td>\n",
+       "      <td>POLYGON Z ((30.27594 48.51505 0.00000, 30.3027...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  tileID                                           geometry\n",
+       "0  35UQP  POLYGON Z ((30.27594 48.51505 0.00000, 30.3027..."
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "date_tile_info = get_tiles(aoi_path, sentinel_tiles_path)\n",
     "date_tile_info"
@@ -421,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,18 +566,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading images for tile: 35UQP...\n",
+      "Loading images for tile 35UQP finished\n"
+     ]
+    }
+   ],
    "source": [
     "loadings = load_images(API_KEY, date_tile_info.tileID.values, START_DATE, END_DATE, LOAD_DIR, PRODUCT_TYPE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'35UQP': {'/home/jovyan/work/satellite_imagery/S2A_MSIL1C_20180408T085601_N0206_R007_T35UQP_20180408T110709',\n",
+       "  '/home/jovyan/work/satellite_imagery/S2B_MSIL1C_20180410T084559_N0206_R107_T35UQP_20180410T123811'}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "loadings"
    ]
@@ -521,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,9 +639,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking NODATA_PIXEL_PERCENTAGE for L1C\n",
+      "NODATA_PIXEL_PERCENTAGE for /home/jovyan/work/satellite_imagery/S2A_MSIL1C_20180408T085601_N0206_R007_T35UQP_20180408T110709 images: 0.0%\n",
+      "NODATA_PIXEL_PERCENTAGE for /home/jovyan/work/satellite_imagery/S2B_MSIL1C_20180410T084559_N0206_R107_T35UQP_20180410T123811 images: 81.47%\n",
+      "NODATA_PIXEL_PERCENTAGE for /home/jovyan/work/satellite_imagery/S2B_MSIL1C_20180410T084559_N0206_R107_T35UQP_20180410T123811 images: 81.43%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'35UQP': {'/home/jovyan/work/satellite_imagery/S2A_MSIL1C_20180408T085601_N0206_R007_T35UQP_20180408T110709'}}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "checked = check_nodata(loadings, PRODUCT_TYPE)\n",
     "checked"
@@ -565,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,9 +707,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'35UQP': '/home/jovyan/work/satellite_imagery/S2A_MSIL1C_20180408T085601_N0206_R007_T35UQP_20180408T110709'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "filtered = filter_date(checked)\n",
     "filtered"
@@ -605,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,18 +758,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/jovyan/work/notebooks/pbd'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "PBD_DIR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan/work/satellite_imagery/S2A_MSIL1C_20180408T085601_N0206_R007_T35UQP_20180408T110709\n",
+      "Processing 35UQP...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [01:04<00:00, 64.88s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished processing 35UQP\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan/work/results/pbd/20180410_082051_0f42_aoi_prediction_vy.geojson\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>id</th>\n",
+       "      <th>tileID</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>end_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>POLYGON ((30.30276 48.58841, 30.30275 48.58823...</td>\n",
+       "      <td>20180410_082051_0f42_aoi_0</td>\n",
+       "      <td>35UQP</td>\n",
+       "      <td>2018-04-08</td>\n",
+       "      <td>2018-04-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>POLYGON ((30.30261 48.58814, 30.30259 48.58788...</td>\n",
+       "      <td>20180410_082051_0f42_aoi_1</td>\n",
+       "      <td>35UQP</td>\n",
+       "      <td>2018-04-08</td>\n",
+       "      <td>2018-04-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>POLYGON ((30.30228 48.58725, 30.30227 48.58707...</td>\n",
+       "      <td>20180410_082051_0f42_aoi_2</td>\n",
+       "      <td>35UQP</td>\n",
+       "      <td>2018-04-08</td>\n",
+       "      <td>2018-04-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>POLYGON ((30.30212 48.58681, 30.30209 48.58636...</td>\n",
+       "      <td>20180410_082051_0f42_aoi_3</td>\n",
+       "      <td>35UQP</td>\n",
+       "      <td>2018-04-08</td>\n",
+       "      <td>2018-04-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>POLYGON ((30.33028 48.58402, 30.33027 48.58393...</td>\n",
+       "      <td>20180410_082051_0f42_aoi_4</td>\n",
+       "      <td>35UQP</td>\n",
+       "      <td>2018-04-08</td>\n",
+       "      <td>2018-04-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>284</th>\n",
+       "      <td>POLYGON ((30.58956 48.46860, 30.58955 48.46851...</td>\n",
+       "      <td>20180410_082051_0f42_aoi_284</td>\n",
+       "      <td>35UQP</td>\n",
+       "      <td>2018-04-08</td>\n",
+       "      <td>2018-04-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>POLYGON ((30.61522 48.47175, 30.61521 48.47166...</td>\n",
+       "      <td>20180410_082051_0f42_aoi_285</td>\n",
+       "      <td>35UQP</td>\n",
+       "      <td>2018-04-08</td>\n",
+       "      <td>2018-04-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>POLYGON ((30.58439 48.46642, 30.58439 48.46633...</td>\n",
+       "      <td>20180410_082051_0f42_aoi_286</td>\n",
+       "      <td>35UQP</td>\n",
+       "      <td>2018-04-08</td>\n",
+       "      <td>2018-04-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td>POLYGON ((30.59477 48.46960, 30.59476 48.46951...</td>\n",
+       "      <td>20180410_082051_0f42_aoi_287</td>\n",
+       "      <td>35UQP</td>\n",
+       "      <td>2018-04-08</td>\n",
+       "      <td>2018-04-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>288</th>\n",
+       "      <td>POLYGON ((30.59738 48.47978, 30.59737 48.47960...</td>\n",
+       "      <td>20180410_082051_0f42_aoi_288</td>\n",
+       "      <td>35UQP</td>\n",
+       "      <td>2018-04-08</td>\n",
+       "      <td>2018-04-12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>289 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              geometry  \\\n",
+       "0    POLYGON ((30.30276 48.58841, 30.30275 48.58823...   \n",
+       "1    POLYGON ((30.30261 48.58814, 30.30259 48.58788...   \n",
+       "2    POLYGON ((30.30228 48.58725, 30.30227 48.58707...   \n",
+       "3    POLYGON ((30.30212 48.58681, 30.30209 48.58636...   \n",
+       "4    POLYGON ((30.33028 48.58402, 30.33027 48.58393...   \n",
+       "..                                                 ...   \n",
+       "284  POLYGON ((30.58956 48.46860, 30.58955 48.46851...   \n",
+       "285  POLYGON ((30.61522 48.47175, 30.61521 48.47166...   \n",
+       "286  POLYGON ((30.58439 48.46642, 30.58439 48.46633...   \n",
+       "287  POLYGON ((30.59477 48.46960, 30.59476 48.46951...   \n",
+       "288  POLYGON ((30.59738 48.47978, 30.59737 48.47960...   \n",
+       "\n",
+       "                               id tileID  start_date    end_date  \n",
+       "0      20180410_082051_0f42_aoi_0  35UQP  2018-04-08  2018-04-12  \n",
+       "1      20180410_082051_0f42_aoi_1  35UQP  2018-04-08  2018-04-12  \n",
+       "2      20180410_082051_0f42_aoi_2  35UQP  2018-04-08  2018-04-12  \n",
+       "3      20180410_082051_0f42_aoi_3  35UQP  2018-04-08  2018-04-12  \n",
+       "4      20180410_082051_0f42_aoi_4  35UQP  2018-04-08  2018-04-12  \n",
+       "..                            ...    ...         ...         ...  \n",
+       "284  20180410_082051_0f42_aoi_284  35UQP  2018-04-08  2018-04-12  \n",
+       "285  20180410_082051_0f42_aoi_285  35UQP  2018-04-08  2018-04-12  \n",
+       "286  20180410_082051_0f42_aoi_286  35UQP  2018-04-08  2018-04-12  \n",
+       "287  20180410_082051_0f42_aoi_287  35UQP  2018-04-08  2018-04-12  \n",
+       "288  20180410_082051_0f42_aoi_288  35UQP  2018-04-08  2018-04-12  \n",
+       "\n",
+       "[289 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result_df = pd.DataFrame([])\n",
     "\n",
