13446: add projecting, other class, upd save path

--- a/data/notebooks/pw/CropTypeStyle.ipynb
+++ b/data/notebooks/pw/CropTypeStyle.ipynb
@@ -14,18 +14,21 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import geopandas as gp"
+    "import geopandas as gp\n",
+    "\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "BASE = f\"/home/{os.getenv('NB_USER')}/work\"\n",
     "\n",
-    "WORKDIR = os.path.join(BASE, \"notebooks/pw\")"
+    "WORKDIR = os.path.join(BASE, \"notebooks/pw\")\n",
+    "RESULTSDIR = os.path.join(BASE, \"results/pw\")"
    ]
   },
   {
@@ -36,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/jovyan/work/notebooks/pw/ohio_CLUs_2020_with_labels.geojson'"
+       "'/home/jovyan/work/notebooks/pw/clu_predictions_2020_reformatted.geojson'"
       ]
      },
      "execution_count": 3,
@@ -45,25 +48,38 @@
     }
    ],
    "source": [
-    "aoi_path = os.getenv(\"AOI\", os.path.join(WORKDIR, \"ohio_CLUs_2020_with_labels.geojson\")) \n",
+    "predictions_path = os.getenv(\"PREDICTIONS\", os.path.join(WORKDIR, \"clu_predictions_2020_reformatted.geojson\")) \n",
     "\n",
-    "if not aoi_path:\n",
-    "    raise RuntimeError(\"Add AOI env var for calculations\") \n",
-    "aoi_path"
+    "if not predictions_path:\n",
+    "    raise RuntimeError(\"Add PREDICTIONS env var for calculations\") \n",
+    "predictions_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aoi = gp.read_file(aoi_path)"
+    "def read_geojson(path, crs=\"epsg:4326\"):\n",
+    "    df = gp.read_file(predictions_path)\n",
+    "    if str(df.crs) != crs:\n",
+    "        df.to_crs(crs, inplace=True)\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = read_geojson(predictions_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -95,33 +111,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>SOYBEANS</td>\n",
-       "      <td>371A09A0-4704-47A8-91CA-C2DCB0003B7A</td>\n",
-       "      <td>MULTIPOLYGON (((-80.92750 40.64728, -80.92749 ...</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>6884CB75-57C8-45BB-9882-545420C97AFF</td>\n",
+       "      <td>MULTIPOLYGON (((-80.92192 40.63885, -80.92126 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>SOYBEANS</td>\n",
-       "      <td>E1DC8DF4-DE03-42C8-9C2C-7F5FDEE5611F</td>\n",
-       "      <td>MULTIPOLYGON (((-80.92468 40.64614, -80.92504 ...</td>\n",
+       "      <td>Corn</td>\n",
+       "      <td>1FAFE575-B9E7-4922-930F-5A6C4C5C5D2D</td>\n",
+       "      <td>MULTIPOLYGON (((-80.93056 40.69504, -80.92921 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>SOYBEANS</td>\n",
-       "      <td>57AF79E6-1D2C-41D9-A103-B6F9391A4E61</td>\n",
-       "      <td>MULTIPOLYGON (((-80.91080 40.63989, -80.91093 ...</td>\n",
+       "      <td>Soybeans</td>\n",
+       "      <td>53764DAD-4477-489F-BD6E-9E5D4043FB12</td>\n",
+       "      <td>MULTIPOLYGON (((-80.89612 40.63810, -80.89616 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>SOYBEANS</td>\n",
-       "      <td>7091dcd3-af88-405a-b2d5-837a2bc6a86e</td>\n",
-       "      <td>MULTIPOLYGON (((-80.92218 40.64609, -80.92237 ...</td>\n",
+       "      <td>Corn</td>\n",
+       "      <td>b1eda639-8d2e-49f8-84be-e42cf4efbf82</td>\n",
+       "      <td>MULTIPOLYGON (((-80.93498 40.69577, -80.93520 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>SOYBEANS</td>\n",
-       "      <td>73599807-ED17-40E2-AB75-B7D1BB6777D5</td>\n",
-       "      <td>MULTIPOLYGON (((-80.91428 40.63666, -80.91441 ...</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>4DD49095-57D8-4075-AA42-34D6B53364CA</td>\n",
+       "      <td>MULTIPOLYGON (((-80.89639 40.64179, -80.89650 ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -129,66 +145,44 @@
       ],
       "text/plain": [
        "      class                                CLU_ID  \\\n",
-       "0  SOYBEANS  371A09A0-4704-47A8-91CA-C2DCB0003B7A   \n",
-       "1  SOYBEANS  E1DC8DF4-DE03-42C8-9C2C-7F5FDEE5611F   \n",
-       "2  SOYBEANS  57AF79E6-1D2C-41D9-A103-B6F9391A4E61   \n",
-       "3  SOYBEANS  7091dcd3-af88-405a-b2d5-837a2bc6a86e   \n",
-       "4  SOYBEANS  73599807-ED17-40E2-AB75-B7D1BB6777D5   \n",
+       "0     Other  6884CB75-57C8-45BB-9882-545420C97AFF   \n",
+       "1      Corn  1FAFE575-B9E7-4922-930F-5A6C4C5C5D2D   \n",
+       "2  Soybeans  53764DAD-4477-489F-BD6E-9E5D4043FB12   \n",
+       "3      Corn  b1eda639-8d2e-49f8-84be-e42cf4efbf82   \n",
+       "4     Other  4DD49095-57D8-4075-AA42-34D6B53364CA   \n",
        "\n",
        "                                            geometry  \n",
-       "0  MULTIPOLYGON (((-80.92750 40.64728, -80.92749 ...  \n",
-       "1  MULTIPOLYGON (((-80.92468 40.64614, -80.92504 ...  \n",
-       "2  MULTIPOLYGON (((-80.91080 40.63989, -80.91093 ...  \n",
-       "3  MULTIPOLYGON (((-80.92218 40.64609, -80.92237 ...  \n",
-       "4  MULTIPOLYGON (((-80.91428 40.63666, -80.91441 ...  "
+       "0  MULTIPOLYGON (((-80.92192 40.63885, -80.92126 ...  \n",
+       "1  MULTIPOLYGON (((-80.93056 40.69504, -80.92921 ...  \n",
+       "2  MULTIPOLYGON (((-80.89612 40.63810, -80.89616 ...  \n",
+       "3  MULTIPOLYGON (((-80.93498 40.69577, -80.93520 ...  \n",
+       "4  MULTIPOLYGON (((-80.89639 40.64179, -80.89650 ...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "aoi.head()"
+    "preds.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['SOYBEANS', 'WHEAT', 'CORN'], dtype=object)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "aoi['class'].unique()"
+    "def create_style(class_):\n",
+    "    colors = dict(soybeans='#6F634B',\n",
+    "                  corn='#fbec5d')\n",
+    "    \n",
+    "    style = dict(color=colors.get(class_.lower(), '#C0C0C0'), \n",
+    "                 popup_text=class_.lower(), \n",
+    "                )    \n",
+    "    return str(style)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'soybeans': '#6F634B', 'wheat': '#f5deb3', 'corn': '#fbec5d'}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -196,28 +190,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_style(class_):\n",
-    "    colors = dict(soybeans='#6F634B',\n",
-    "                  wheat='#f5deb3',\n",
-    "                  corn='#fbec5d')\n",
-    "    \n",
-    "    style = dict(color=colors[class_.lower()], \n",
-    "                 text=class_.lower(), )    \n",
-    "    return str(style)"
+    "preds['style'] = preds['class'].apply(lambda cl: create_style(cl))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aoi['style'] = aoi['class'].apply(lambda cl: create_style(cl))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -250,169 +228,79 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>SOYBEANS</td>\n",
-       "      <td>371A09A0-4704-47A8-91CA-C2DCB0003B7A</td>\n",
-       "      <td>MULTIPOLYGON (((-80.92750 40.64728, -80.92749 ...</td>\n",
-       "      <td>{'color': '#6F634B', 'text': 'soybeans', 'fill...</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>6884CB75-57C8-45BB-9882-545420C97AFF</td>\n",
+       "      <td>MULTIPOLYGON (((-80.92192 40.63885, -80.92126 ...</td>\n",
+       "      <td>{'color': '#C0C0C0', 'popup_text': 'other'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>SOYBEANS</td>\n",
-       "      <td>E1DC8DF4-DE03-42C8-9C2C-7F5FDEE5611F</td>\n",
-       "      <td>MULTIPOLYGON (((-80.92468 40.64614, -80.92504 ...</td>\n",
-       "      <td>{'color': '#6F634B', 'text': 'soybeans', 'fill...</td>\n",
+       "      <td>Corn</td>\n",
+       "      <td>1FAFE575-B9E7-4922-930F-5A6C4C5C5D2D</td>\n",
+       "      <td>MULTIPOLYGON (((-80.93056 40.69504, -80.92921 ...</td>\n",
+       "      <td>{'color': '#fbec5d', 'popup_text': 'corn'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>SOYBEANS</td>\n",
-       "      <td>57AF79E6-1D2C-41D9-A103-B6F9391A4E61</td>\n",
-       "      <td>MULTIPOLYGON (((-80.91080 40.63989, -80.91093 ...</td>\n",
-       "      <td>{'color': '#6F634B', 'text': 'soybeans', 'fill...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>SOYBEANS</td>\n",
-       "      <td>7091dcd3-af88-405a-b2d5-837a2bc6a86e</td>\n",
-       "      <td>MULTIPOLYGON (((-80.92218 40.64609, -80.92237 ...</td>\n",
-       "      <td>{'color': '#6F634B', 'text': 'soybeans', 'fill...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SOYBEANS</td>\n",
-       "      <td>73599807-ED17-40E2-AB75-B7D1BB6777D5</td>\n",
-       "      <td>MULTIPOLYGON (((-80.91428 40.63666, -80.91441 ...</td>\n",
-       "      <td>{'color': '#6F634B', 'text': 'soybeans', 'fill...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>229</th>\n",
-       "      <td>CORN</td>\n",
-       "      <td>6204BEA1-C2BA-4B06-A214-0B9E12F63F5C</td>\n",
-       "      <td>MULTIPOLYGON (((-83.60941 39.83538, -83.60945 ...</td>\n",
-       "      <td>{'color': '#fbec5d', 'text': 'corn', 'fill-opa...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>230</th>\n",
-       "      <td>CORN</td>\n",
-       "      <td>62EDC32F-3AEF-4213-AE2F-4DA39DC4915F</td>\n",
-       "      <td>MULTIPOLYGON (((-83.77386 39.89772, -83.77353 ...</td>\n",
-       "      <td>{'color': '#fbec5d', 'text': 'corn', 'fill-opa...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>231</th>\n",
-       "      <td>CORN</td>\n",
-       "      <td>d1e22ad4-55da-40a1-977d-19faf574f6e6</td>\n",
-       "      <td>MULTIPOLYGON (((-83.73172 39.79389, -83.73196 ...</td>\n",
-       "      <td>{'color': '#fbec5d', 'text': 'corn', 'fill-opa...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>232</th>\n",
-       "      <td>SOYBEANS</td>\n",
-       "      <td>644207de-df2e-4cd7-af81-94b97c36fa4e</td>\n",
-       "      <td>MULTIPOLYGON (((-83.91607 40.00377, -83.91589 ...</td>\n",
-       "      <td>{'color': '#6F634B', 'text': 'soybeans', 'fill...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>233</th>\n",
-       "      <td>SOYBEANS</td>\n",
-       "      <td>8A476A03-F698-4F2E-8C78-D96AC4BE431B</td>\n",
-       "      <td>MULTIPOLYGON (((-83.67913 39.92328, -83.67990 ...</td>\n",
-       "      <td>{'color': '#6F634B', 'text': 'soybeans', 'fill...</td>\n",
+       "      <td>Soybeans</td>\n",
+       "      <td>53764DAD-4477-489F-BD6E-9E5D4043FB12</td>\n",
+       "      <td>MULTIPOLYGON (((-80.89612 40.63810, -80.89616 ...</td>\n",
+       "      <td>{'color': '#6F634B', 'popup_text': 'soybeans'}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>234 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        class                                CLU_ID  \\\n",
-       "0    SOYBEANS  371A09A0-4704-47A8-91CA-C2DCB0003B7A   \n",
-       "1    SOYBEANS  E1DC8DF4-DE03-42C8-9C2C-7F5FDEE5611F   \n",
-       "2    SOYBEANS  57AF79E6-1D2C-41D9-A103-B6F9391A4E61   \n",
-       "3    SOYBEANS  7091dcd3-af88-405a-b2d5-837a2bc6a86e   \n",
-       "4    SOYBEANS  73599807-ED17-40E2-AB75-B7D1BB6777D5   \n",
-       "..        ...                                   ...   \n",
-       "229      CORN  6204BEA1-C2BA-4B06-A214-0B9E12F63F5C   \n",
-       "230      CORN  62EDC32F-3AEF-4213-AE2F-4DA39DC4915F   \n",
-       "231      CORN  d1e22ad4-55da-40a1-977d-19faf574f6e6   \n",
-       "232  SOYBEANS  644207de-df2e-4cd7-af81-94b97c36fa4e   \n",
-       "233  SOYBEANS  8A476A03-F698-4F2E-8C78-D96AC4BE431B   \n",
+       "      class                                CLU_ID  \\\n",
+       "0     Other  6884CB75-57C8-45BB-9882-545420C97AFF   \n",
+       "1      Corn  1FAFE575-B9E7-4922-930F-5A6C4C5C5D2D   \n",
+       "2  Soybeans  53764DAD-4477-489F-BD6E-9E5D4043FB12   \n",
        "\n",
-       "                                              geometry  \\\n",
-       "0    MULTIPOLYGON (((-80.92750 40.64728, -80.92749 ...   \n",
-       "1    MULTIPOLYGON (((-80.92468 40.64614, -80.92504 ...   \n",
-       "2    MULTIPOLYGON (((-80.91080 40.63989, -80.91093 ...   \n",
-       "3    MULTIPOLYGON (((-80.92218 40.64609, -80.92237 ...   \n",
-       "4    MULTIPOLYGON (((-80.91428 40.63666, -80.91441 ...   \n",
-       "..                                                 ...   \n",
-       "229  MULTIPOLYGON (((-83.60941 39.83538, -83.60945 ...   \n",
-       "230  MULTIPOLYGON (((-83.77386 39.89772, -83.77353 ...   \n",
-       "231  MULTIPOLYGON (((-83.73172 39.79389, -83.73196 ...   \n",
-       "232  MULTIPOLYGON (((-83.91607 40.00377, -83.91589 ...   \n",
-       "233  MULTIPOLYGON (((-83.67913 39.92328, -83.67990 ...   \n",
+       "                                            geometry  \\\n",
+       "0  MULTIPOLYGON (((-80.92192 40.63885, -80.92126 ...   \n",
+       "1  MULTIPOLYGON (((-80.93056 40.69504, -80.92921 ...   \n",
+       "2  MULTIPOLYGON (((-80.89612 40.63810, -80.89616 ...   \n",
        "\n",
-       "                                                 style  \n",
-       "0    {'color': '#6F634B', 'text': 'soybeans', 'fill...  \n",
-       "1    {'color': '#6F634B', 'text': 'soybeans', 'fill...  \n",
-       "2    {'color': '#6F634B', 'text': 'soybeans', 'fill...  \n",
-       "3    {'color': '#6F634B', 'text': 'soybeans', 'fill...  \n",
-       "4    {'color': '#6F634B', 'text': 'soybeans', 'fill...  \n",
-       "..                                                 ...  \n",
-       "229  {'color': '#fbec5d', 'text': 'corn', 'fill-opa...  \n",
-       "230  {'color': '#fbec5d', 'text': 'corn', 'fill-opa...  \n",
-       "231  {'color': '#fbec5d', 'text': 'corn', 'fill-opa...  \n",
-       "232  {'color': '#6F634B', 'text': 'soybeans', 'fill...  \n",
-       "233  {'color': '#6F634B', 'text': 'soybeans', 'fill...  \n",
-       "\n",
-       "[234 rows x 4 columns]"
+       "                                            style  \n",
+       "0     {'color': '#C0C0C0', 'popup_text': 'other'}  \n",
+       "1      {'color': '#fbec5d', 'popup_text': 'corn'}  \n",
+       "2  {'color': '#6F634B', 'popup_text': 'soybeans'}  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "aoi"
+    "preds.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp_path = os.path.join(BASE, \"results/pw/styled.geojson.temp\") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating .geojson file...\n",
-      "Generated temp file: /home/jovyan/work/results/pw/styled.geojson.temp\n",
-      "Rename temp file: /home/jovyan/work/results/pw/styled.geojson.temp to /home/jovyan/work/results/pw/styled.geojson\n",
+      "Generating styled result .geojson file...\n",
+      "Generated temp file: /home/jovyan/work/results/pw/clu_predictions_2020_reformatted.geojson.temp\n",
+      "Rename temp file: /home/jovyan/work/results/pw/clu_predictions_2020_reformatted.geojson.temp to /home/jovyan/work/results/pw/clu_predictions_2020_reformatted.geojson\n",
       "Execution finished\n"
      ]
     }
    ],
    "source": [
-    "print(\"Generating .geojson file...\")\n",
+    "print(\"Generating styled result .geojson file...\")\n",
     "\n",
+    "stem = Path(predictions_path).stem\n",
+    "temp_path = os.path.join(BASE, f\"{RESULTSDIR}/{stem}.geojson.temp\") \n",
     "os.makedirs(os.path.dirname(temp_path), exist_ok=True)\n",
     "\n",
-    "aoi.to_file(temp_path, driver='GeoJSON')\n",
+    "preds.to_file(temp_path, driver='GeoJSON')\n",
     "    \n",
     "print(f\"Generated temp file: {temp_path}\")\n",
     "output_path = temp_path[:-5]\n",
