13446: change soybeans color

--- a/data/notebooks/pw/raster_predict.ipynb
+++ b/data/notebooks/pw/raster_predict.ipynb
@@ -265,7 +265,7 @@
    "outputs": [],
    "source": [
     "def create_style(class_):\n",
-    "    colors = dict(soybeans='#6F634B',\n",
+    "    colors = dict(soybeans='#d6bb87',\n",
     "                  corn='#fbec5d')\n",
     "    \n",
     "    style = dict(color=colors.get(class_.lower(), '#C0C0C0'), \n",
