update test from docker notebook

--- a/data/notebooks/example/Test.ipynb
+++ b/data/notebooks/example/Test.ipynb
@@ -19,12 +19,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "new test assign\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"new test assign\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    " 191fd9e8b1a8bb119dabfee30a41c2d2727b93ec"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
