--- a/data/notebooks/pw/raster_predict.ipynb
+++ b/data/notebooks/pw/raster_predict.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Styles result CropType .geojson. Note, that you have to add original path to results .geojson file obtained after learning model. See on pw folder and additional notebooks on server."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -442,9 +449,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PW",
+   "display_name": "python37",
    "language": "python",
-   "name": "pw"
+   "name": "python37"
   },
   "language_info": {
    "codemirror_mode": {
@@ -456,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
