13446: add test_labels generation to geojson

--- a/data/notebooks/example/geojson.ipynb
+++ b/data/notebooks/example/geojson.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,14 +415,15 @@
     "        data = copy.deepcopy(data_template)\n",
     "        data[0][\"y\"] = [random.randint(1, 5000), random.randint(1, 10000)]\n",
     "        style = dict(color=random.choice([\"red\", \"green\", \"blue\"]))\n",
-    "        feature = Feature(geometry=geometry, properties=dict(style=style, data=data, layout=layout))\n",
+    "        label = random.choice([\"test_label_1\", \"test_label_2\", \"test_label_3\"])\n",
+    "        feature = Feature(geometry=geometry, properties=dict(style=style, data=data, layout=layout, label=label))\n",
     "        features.append(feature)\n",
     "    return features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,23 +462,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating .geojson file...\n",
-      "6 features will be in current file\n",
-      "Generated 6 features\n",
-      "Randomly selected to add start_date: 2020-01-23T18:34:22 and end_date: 2020-05-09T03:30:57\n",
-      "Generated temp file: /home/jovyan/work/results/example/455a8e6c-55a2-41f1-991f-57b1ab772a33_NDVI_2020-01-06.geojson.temp\n",
-      "Rename temp file: /home/jovyan/work/results/example/455a8e6c-55a2-41f1-991f-57b1ab772a33_NDVI_2020-01-06.geojson.temp to /home/jovyan/work/results/example/455a8e6c-55a2-41f1-991f-57b1ab772a33_NDVI_2020-01-06.geojson\n",
-      "Execution finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Generating .geojson file...\")\n",
     "\n",
@@ -494,6 +481,40 @@
     "\n",
     "print(\"Execution finished\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = gp.read_file(\"/home/jovyan/work/results/example/655a2105-0b04-4b4c-bb15-df42234c7334_Red_2020-07-21.geojson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -512,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
